# learning-ai-google-adk

./: .gitignore  AGENTS.md  justfile  pyproject.toml
content_generator/: __init__.py  analyzers.py  domains.py  models.py  project_registry.py  templates.py  tools.py  utils.py  validators.py
content_generator/builtin_templates/: __init__.py
content_generator_agent/: __init__.py  agent.py  prompts.py
google_search_agent/: __init__.py  agent.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_e2e.py  test_analyzers.py  test_builtin_templates.py  test_domains.py  test_models.py  test_project_registry.py  test_prompts.py  test_templates.py  test_tools.py  test_utils.py  test_validators.py
